# datacraft

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGES.md  LICENSE  LICENSE.txt  README.md  cli.py  requirements.txt  setup.cfg  setup.py  test-requirements.txt
.circleci/: config.yml
datacraft/: __init__.py  __main__.py  _registered_types.py  builder.py  casters.py  cli.py  defaults.py  distributions.py  entrypoints.py  exceptions.py  infer.py  loader.py  logging_handler.py  outputs.py  preprocessor.py  registries.py  schemas.py  server.py  spec_formatters.py  suppliers.py  template_engines.py  usage.py  utils.py
datacraft/_infer/: __init__.py  __main__.py  date_str_analyzers.py  default_analyzer.py  entrypoint.py  geo_analyzers.py  helpers.py  network_str_analyzers.py  num_analyzers.py  regex_str_analyzers.py  str_analyzers.py
datacraft/_registered_types/: __init__.py  calculate.py  char_class.py  combine.py  common.py  config_ref.py  csv.py  date.py  distribution.py  entrypoint.py  geo.py  iteration.py  nested.py  network.py  numeric_suppliers.py  range_suppliers.py  ref_list.py  refs.py  replace.py  sample.py  schemas.py  select_list_subset.py  templated.py  unicode_range.py  uuid_handler.py  values.py
datacraft/schema/: char_class.schema.json  combine-list.schema.json  combine.schema.json  csv.schema.json  date.schema.json  definitions.json  geo.lat.schema.json  geo.pair.schema.json  nested.schema.json  net.mac.schema.json  ref.schema.json  templated.schema.json  unicode_range.schema.json  values.schema.json  weighted_csv.schema.json
datacraft/supplier/: calculate.py  combine.py  common.py  csv.py  date.py  key_suppliers.py  model.py  nested.py  network.py  (+6 more)
datagen/: __init__.py  __main__.py  _registered_types.py  builder.py  calculate.py  casters.py  char_class.py  cli.py  combine.py  config_ref.py  csv.py  date.py  defaults.py  distributions.py  exceptions.py  geo.py  key_providers.py  loader.py  logging_handler.py  model.py  nested.py  network.py  outputs.py  preprocessor.py  range_suppliers.py  refs.py  registries.py  schemas.py  select_list_subset.py  server.py  spec_formatters.py  suppliers.py  template_engines.py  types.py  unicode_range.py  utils.py  uuid_handler.py  values.py
datamaker/: __init__.py  loader.py  outputs.py  suppliers.py  template_engines.py  types.py
dataspec/: __init__.py  builder.py  casters.py  defaults.py  distributions.py  exceptions.py  generate.py  key_providers.py  loader.py  logging.py  logging_handler.py  model.py  outputs.py  preprocessor.py  schemas.py  suppliers.py  template_engines.py  types.py  utils.py
docs/: EXAMPLES.md  FIELDSPECS.md  SCHEMAS.md  requirements.txt
schema/: combine-list.schema.json  combine.schema.json  definitions.json  geo.long.schema.json  geo.pair.schema.json  range.schema.json  schema.tests.json  test_schemas.py  values.schema.json
tests/: builder.py  conftest.py  test_analyzers.py  test_buffering.py  test_builder.py  test_calculate.py  test_casters.py  test_char_class.py  test_combine.py  test_counts.py  test_csv.py  test_date.py  test_defaults.py  test_distributions.py  test_entrypoints.py  test_generate.py  test_geo.py  test_infer.py  test_infer_main.py  test_infer_priority.py  test_infer_roundtrips.py  test_infer_with_refs.py  test_ip.py  test_iteration.py  test_key_providers.py  test_key_suppliers.py  test_list_combine.py  test_loader.py  test_logging_handler.py  test_main.py  test_model.py  test_nested.py  test_network.py  test_number_precision.py  test_outputs.py  test_preprocessor.py  test_random_range.py  test_range_supplier.py  test_ref_list.py  test_refs.py  (+18 more)
(+283 files in other folders)
