[metadata]
name = datagen
version = 0.1.0
description = Data Generation Through Specification
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/bbux-dev/datagen
author = Brian Buxton
author_email = bbux-dev@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:

[options.entry_points]
console_scripts =
    datagen = datagen.__main__:wrap_main

[options.extras_require]
test =
    pytest >= 6.2.2
    pycodestyle
    pytest-cov
all =
    %(test)s