[metadata]
name = datacraft
version = 0.3.0
description = Data Generation Through Specification
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/bbux-dev/datacraft
author = Brian Buxton
author_email = bbux-dev@gmail.com
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:

install_requires =
    setuptools~=45.2.0
    pyyaml~=5.1
    catalogue~=2.0.1
    jinja2~=3.0.3
    jsonschema~=3.2.0
    asteval~=0.9.25
    importlib-resources~=5.2.2

[options.packages.find]
exclude = tests, docs

[options.entry_points]
console_scripts =
    datacraft = datacraft.__main__:wrap_main

[options.package_data]
* = *.json

[options.extras_require]
test =
    pytest >= 6.2.2
    pycodestyle
    pytest-cov
all =
    %(test)s
