[metadata]
name = datacraft
version = 0.12.0
description = Data Generation Through Specification
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/bbux-dev/datacraft
author = Brian Buxton
author_email = bbux.dev@gmail.com
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:

install_requires =
    setuptools
    pyyaml>=5.1
    catalogue>=2.0.1
    jinja2>=3.0.3
    jsonschema>=3.2.0
    asteval>=0.9.25
    importlib-resources>=5.2.2
    importlib-metadata>=4.8.2

[options.packages.find]
exclude = tests, docs

[options.entry_points]
console_scripts =
    datacraft = datacraft.__main__:wrap_main
    infer-spec = datacraft._infer.__main__:wrap_main
datacraft.custom_type_loader =
    core = datacraft._registered_types.entrypoint:load_custom
    builtin-inference = datacraft._infer.entrypoint:load_custom

[options.package_data]
* = *.json
datacraft =
    py.typed

[options.extras_require]
test =
    pytest >= 6.2.2
    pycodestyle
    pytest-cov
    pytest-mock
    pandas # for some tests
    flask # for server tests
all =
    %(test)s
